Revision history for HTML::StateTable

          - Removes use of innerHTML
          - Added version numbers to LESS and JS
          - Fixes non display of page size control
          - More CSS
          - Position prefernces dialog with gravity towards page centre
          - CSS done for now
          - Refactored more CSS
          - More CSS refactoring
          - CSS colour refactoring
          - Fixes download filename and number of rows downloaded
          - Fixes variable redefinition in Filterable
          - Adds CSS style class to column headers
          - Date and DateTime cell traits add classes to td
          - Chartable title styling improvements
          - Form role adds form_classes. Display tables with form styling
          - Remove had coded reference to icons file
          - Better form dialog and search CSS
          - Fixed related tables filter selection dialog
          - Fixed bug in filter values from related tables
          - Replaced maps with variables in CSS
          - Added Remainder cell trait
          - Improved construction in Manager
          - Changed event register method name in JS utils
          - Fixed author email address
          - Added a render and serialisation test
          - Registers scan with Util.Event
          - Prereq fixes

0.2.1     2024-11-27 20:15:10
          - Bumping version number
          - More guide related POD added
          - Completed POD
          - Cell rendering can handle embed markup
          - Update copyright year. Animate buttons in table render
          - Moved onReady function to utils
          - Rationalised JS package names
          - Renames JS files
          - Uses icons. Moves utf8 default characters to JS
          - Caption now optional first div
          - Fixes column reorder with selector in last column
          - Better errors. Modal popups. More buttons. Flexible tag names
          - Fixes resetting page to one when searching/filtering